@@ -1,0 +1,5 @@
+(* Operations on structure trees. *)
+open Pdfutil
+
+let trim_structure_tree pdf range =
+  flprint "trim_structure_tree\n"
