@@ -3,6 +3,7 @@
 o Fix sign extension in js_of_ocaml
 o Pdfannot expanded to more annotation types
 o New Pdftree module. API to change.
+o New Pdfst module for structure trees
 
 2.7 (February 2024)
 
